--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,15 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!--springsession刷新-->
+  <!--<filter>-->
+  <!--<filter-name>springSessionRepositoryFilter</filter-name>-->
+  <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+  <!--</filter>-->
+  <!--<filter-mapping>-->
+  <!--<filter-name>springSessionRepositoryFilter</filter-name>-->
+  <!--<url-pattern>/*</url-pattern>-->
+  <!--</filter-mapping>-->
   <!-- spring mvc核心：分发servlet -->
   <servlet>
     <servlet-name>mvc-dispatcher</servlet-name>
